# wavyOS

./: .gitignore  Cargo.toml  README.md  build-iso.sh  build.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: auto-release.yml  daily-build.yml  rust.yml
apps/desktop_shell/: Cargo.toml
apps/desktop_shell/src/: main.rs
apps/gui/: Cargo.toml
apps/gui/src/: color.rs  drawing.rs  event.rs  font_data.in  font_data.rs  layout.rs  lib.rs  widget.rs  window.rs
apps/libaudio/: Cargo.toml
apps/libaudio/src/: lib.rs
apps/libvibe/src/: lib.rs
apps/sample_app/: Cargo.toml
apps/sample_app/src/: main.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: font_data.rs  main.rs
apps/windowserver/: Cargo.toml
apps/windowserver/src/: main.rs
bootloader/: Cargo.toml
bootloader/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
crates/aarch64-decode/: Cargo.toml
crates/aarch64-decode/src/: lib.rs
crates/pe-parser/: Cargo.toml
crates/x86-decode/: Cargo.toml
docs/: ARCHITECTURE.md  CONTINUATION.md  WINDOWS_COMPATIBILITY.md
docs/superpowers/: continuation.md
drivers/: Cargo.toml
drivers/src/: lib.rs  uart.rs  virtio.rs
hal/: Cargo.toml
hal/src/: aarch64.rs  lib.rs  x86_64.rs
kernel/: Cargo.toml  build.rs  linker.ld  linker_aarch64.ld
kernel/src/: boot_info.rs  input.rs  ipc.rs  lib.rs  logger.rs  main.rs  panic.rs  pty.rs  shm.rs  wm.rs
kernel/src/arch/: aarch64.rs  mod.rs  switch_aarch64.s  switch_x86_64.s  syscall_x86_64.s  vector_table_aarch64.s  x86_64.rs
kernel/src/arch/aarch64/: gdt.rs  interrupts.rs  mod.rs
kernel/src/arch/x86_64/: interrupts.rs  mod.rs  syscall.rs
kernel/src/audio/: mod.rs
kernel/src/compat/: dyld.rs  macho.rs  mod.rs
kernel/src/drivers/: cursor.rs  fbcon.rs  mod.rs  pcspkr.rs  ps2kbd.rs  ps2mouse.rs  uart.rs  virtio_snd.rs
kernel/src/fs/: fat32.rs  mod.rs  virtio_blk.rs
kernel/src/gui/: color.rs  compositor.rs  cursor.rs  desktop.rs  font.rs  mod.rs
kernel/src/mm/: frame_alloc.rs  frame_allocator.rs  mod.rs  page_table.rs
kernel/src/net/: arp.rs  dns.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs  virtio_net.rs
kernel/src/scheduler/: mod.rs
kernel/src/syscalls/: mod.rs
kernel/src/userland/: brew.rs  compositor.rs  loader.rs  mod.rs  shell.rs
kernel/src/vfs/: mod.rs
kernel/src/win32/: fs.rs  loader.rs  mod.rs  nt.rs  objects.rs  process.rs  registry.rs  scheduler.rs  thread.rs  win32k.rs
kernel/src/win32/abi/: aarch64_interpreter.rs  aarch64_jit.rs  interpreter.rs  mod.rs  syscall.rs  x86_jit.rs
scripts/: build.sh  hermes-loop.sh  test.sh
targets/: vibeos-aarch64.json  vibeos-x86_64.json
tools/: aarch64-bootimage.sh  gen_minimal_pe64.py  limine.conf
tools/bootimage/: Cargo.toml
(+5 files in other folders)
