[workspace]
resolver = "2"
members = [
    "common",
    "bootloader",
    "kernel",
    "hal",
    "drivers",
    "apps/libvibe",
    "apps/windowserver",
    "apps/desktop_shell",
    "apps/sample_app",
]

default-members = [
    "kernel",
    "bootloader",
]

[workspace.package]
version = "0.1.22"
edition = "2021"
authors = ["vibe-coded-os contributors"]
license = "GPL-3.0"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true
panic = "abort"
