[package]
name = "bootloader"
version.workspace = true
edition.workspace = true

[dependencies]
uefi = { version = "0.27", features = ["alloc", "global_allocator", "logger"] }
uefi-services = "0.24"
goblin = { version = "0.8", default-features = false, features = ["elf64"] }
common = { path = "../common" }
log = { version = "0.4.29", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"

[[bin]]
name = "bootloader"
path = "src/main.rs"
