[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Aperture OS Team"]

[dependencies]
spin = "0.10.0"
pe-parser = { path = "../crates/pe-parser" }

[dependencies.bootloader_api]
version = "0.11.9"
optional = true

[dependencies.x86_64]
version = "0.15.2"
optional = true

[dependencies.uart_16550]
version = "0.3.2"
optional = true

[features]
default = ["arch_x86_64"]
arch_x86_64 = ["dep:bootloader_api", "dep:x86_64", "dep:uart_16550"]
arch_aarch64 = []
